--- a/css/index.css
+++ b/css/index.css
@@ -1,209 +1,74 @@
-body, html {
-	width: 100%;
-    padding: 0%;
-    margin: 0%;
-    text-align: center;
-    height: 100%;
-    cursor: default;
-    -webkit-font-smoothing: antialiased;
+nav {
+    background-color: #202020;
+    color: #ffffff;
 }
 
-img {
-	max-width: 100%;
+header {
+    font-family: 'Playfair Display', serif;
+    font-size: 84px;
+    font-weight: 400;
+    color: #EDC951;
+    text-transform: lowercase;
+    font-style: italic;
 }
 
-/* Alignment */
-
-.right-align {
-	text-align: right !important;
+footer {
+    background-color: #EDC951;
+    font-family: 'Playfair Display', serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #ffffff;
+    text-transform: uppercase;
 }
 
-/* Background Colors */
-
-.maroon-bg {
-	background-color: #6d2c30;
+.section-name {
+    font-family: 'Playfair Display', serif;
+    font-size: 18px;
+    color: #636363;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+.section-description {
+    border-left: 1px solid #d3d3d3;
+    font-family: 'PT Serif', serif;
+    font-size: 14px;
+    font-weight: 300;
+    color: #202020;
 }
 
-.light-bg {
-	background-color: #ffffff;
+.section-description b {
+    font-weight: 700;
 }
 
-.grey-bg {
-	background-color: #f8f8f8;
-	border-top: 1px solid #e9e9e9;
-	border-bottom: 1px solid #e9e9e9;
+a {
+    color: #636363;
+    text-decoration: none;
 }
 
-/* Headers */
-
-h1 {
-	color: #ffffff;
-	font-size: 6rem;
-	font-family: 'montserratbold', sans-serif;
+a:hover {
+    color: #EDC951;
 }
 
-h2 {
-	color: #6d2c30;
-	font-size: 3.5rem;
-	font-family: 'montserratbold', sans-serif;
+/* For when you want containers different sizes */
+.column-875p {
+    width: 87.5%;
 }
 
-h4 {
-	color: #535353;
-	font-size: 1.5rem;
-	font-family: 'merriweatherlight', serif;
+@media screen and (max-width: 920px) {
+    .column-875p, .column-8 {
+        width: 100% !important;
+    }
+
+    .section-name {
+        text-align: left !important;
+    }
+
+    .section-description {
+        padding-left: 20px;
+    }
+
+    header {
+        text-align: center !important;
+    }
+
 }
-
-h5 {
-	color: #6d2c30;
-	font-size: 1.25rem;
-	font-family: 'source_sans_prolight', sans-serif;
-}
-
-/* Spans */
-
-.span-1 {
-	color: #535353;
-	font-size: 1.25rem;
-	font-family: 'merriweatherlight', serif;
-	line-height: 2.5rem;
-}
-
-.span-1 > b, .span-3 > b {
-	color: #6d2c30;
-}
-
-.span-2 {
-	color: #535353;
-	font-size: 1rem;
-	font-family: 'source_sans_prolight', sans-serif;
-	line-height: 1.5rem;
-}
-
-.span-2 > i {
-	font-family: 'source_sans_proitalic', sans-serif;
-	font-style: italic; 
-}
-
-.span-2 > a {
-	color: #6d2c30;
-	text-decoration: none;
-	transition: color 0.5s;
-}
-
-.span-2 > a:hover {
-	color: #000000;
-}
-
-.span-3 {
-	color: #535353;
-	font-size: 1rem;
-	font-family: 'merriweatherlight', serif;
-	line-height: 2rem;
-}
-
-.span-3 > a {
-	color: #6d2c30;
-	text-decoration: none;
-	transition: color 0.5s;
-}
-
-.span-3 > a:hover {
-	color: #000000;
-}
-
-.span-4 {
-	color: #ffffff;
-	font-family: 'merriweatherlight', serif;
-	font-size: 0.75rem;
-}
-
-/* Divider */
-
-.divider {
-	background-color: #e9e9e9;
-	height: 1px;
-	width: 30%;
-	position: relative;
-	margin: 30px auto;
-}
-
-/* Navigation */
-
-nav ul {
-	padding: 0%;
-	margin: 0%;
-	display: block;
-}
-
-nav ul li {
-	padding: 0%;
-	margin: 0px 0px 0px 50px;
-	display: inline-block;
-}
-
-nav ul li a {
-	color: #ffffff;
-	font-family: 'merriweatherlight', sans-serif;
-	font-size: 1rem;
-	line-height: 40px;
-	text-decoration: none;
-}
-
-nav ul li a:hover {
-	text-decoration: underline;
-}
-
-nav ul li:last-of-type {
-	margin-right: 50px;
-}
-
-#nav-mobile {
-	display: none;
-}
-
-a i.fa {
-	color: #ffffff;
-	font-size: 3rem;
-	margin-right: 20px
-}
-
-a:last-of-type i.fa {
-	margin-right: 0px
-}
-
-@media screen and (max-width: 350px){
-	h1 {
-		font-size: 2rem;
-	}
-	h2 {
-		font-size: 2rem;
-	}
-}
-
-@media screen and (max-width: 480px){
-	.span-1 {
-		font-size: 1.25rem;
-		line-height: 2rem;
-	}
-}
-
-@media screen and (max-width: 500px){
-	h1 {
-		font-size: 4rem;
-	}
-	h2 {
-		font-size: 2rem;
-	}
-}
-
-@media screen and (max-width: 850px){
-	#nav-mobile {
-		display: block;
-	}
-
-	nav {
-		display: none;
-	}
-}
-
